--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
+Alpha Blog application
 
 * Ruby version
+  2.3.4
+  
+* Rails version
+  4.2.5
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+heroku link:
+https://alphablogapplication.herokuapp.com/
